--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,14 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>br.ufrn.imd.web2</groupId>
-            <artifactId>SIG-AudioVisual-Framework</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>jar</type>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.18</version>
+        </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
         </dependency>
     </dependencies>
 
