--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,68 +2,54 @@
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>RegisterUser</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.RegisterUser</servlet-class>
+        <servlet-class>com.imd.telemaco.presentation.user.RegisterUser</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>LoginUser</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.LoginUser</servlet-class>
+        <servlet-class>com.imd.telemaco.presentation.user.LoginUser</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>LogoutUser</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.LogoutUser</servlet-class>
+        <servlet-class>com.imd.telemaco.presentation.user.LogoutUser</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>UpdatePassword</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.UpdatePassword</servlet-class>
+        <servlet-class>com.imd.telemaco.presentation.user.UpdatePassword</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>RegisterSerie</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.RegisterSerie</servlet-class>
+        <servlet-name>AddAudiovisualToList</servlet-name>
+        <servlet-class>com.imd.telemaco.presentation.user.AddAudiovisualToList</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>RegisterSeason</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.RegisterSeason</servlet-class>
+        <servlet-name>RemoveAudiovisualFromList</servlet-name>
+        <servlet-class>com.imd.telemaco.presentation.user.RemoveAudiovisualFromList</servlet-class>
+    </servlet>
+    
+    <servlet>
+        <servlet-name>RegisterFilm</servlet-name>
+        <servlet-class>com.imd.telemaco.presentation.RegisterFilm</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>SelectAllSeries</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.SelectAllSeries</servlet-class>
+        <servlet-name>SelectAllFilms</servlet-name>
+        <servlet-class>com.imd.telemaco.presentation.SelectAllFilms</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>SelectAllSeasons</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.SelectAllSeasons</servlet-class>
+        <servlet-name>SearchFilm</servlet-name>
+        <servlet-class>com.imd.telemaco.presentation.SearchFilm</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>RegisterEpisode</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.RegisterEpisode</servlet-class>
+        <servlet-name>SelectFilm</servlet-name>
+        <servlet-class>com.imd.telemaco.presentation.SelectFilm</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>WatchEpisodes</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.WatchEpisodes</servlet-class>
+        <servlet-name>AddRatingFilm</servlet-name>
+        <servlet-class>com.imd.telemaco.presentation.AddRatingFilm</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>SearchSerie</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.SearchSerie</servlet-class>
+        <servlet-name>RemoveRatingFilm</servlet-name>
+        <servlet-class>com.imd.telemaco.presentation.RemoveRatingFilm</servlet-class>
     </servlet>
-    <servlet>
-        <servlet-name>SelectSerie</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.SelectSerie</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>AddRating</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.AddRating</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>RemoveRating</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.RemoveRating</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>AddSerieToList</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.AddSerieToList</servlet-class>
-    </servlet>
-    <servlet>
-        <servlet-name>RemoveSerieFromList</servlet-name>
-        <servlet-class>com.imd.telemaco.presentation.RemoveSerieFromList</servlet-class>
-    </servlet>
+    
     <servlet-mapping>
         <servlet-name>RegisterUser</servlet-name>
         <url-pattern>/RegisterUser</url-pattern>
@@ -81,53 +67,39 @@
         <url-pattern>/UpdatePassword</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>RegisterSerie</servlet-name>
-        <url-pattern>/RegisterSerie</url-pattern>
+        <servlet-name>AddAudiovisualToList</servlet-name>
+        <url-pattern>/AddAudiovisualToList</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>RegisterSeason</servlet-name>
-        <url-pattern>/RegisterSeason</url-pattern>
+        <servlet-name>RemoveAudiovisualFromList</servlet-name>
+        <url-pattern>/RemoveAudiovisualFromList</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>RegisterFilm</servlet-name>
+        <url-pattern>/RegisterFilm</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>SelectAllSeries</servlet-name>
-        <url-pattern>/SelectAllSeries</url-pattern>
+        <servlet-name>SelectAllFilms</servlet-name>
+        <url-pattern>/SelectAllFilms</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>SelectAllSeasons</servlet-name>
-        <url-pattern>/SelectAllSeasons</url-pattern>
+        <servlet-name>SearchFilm</servlet-name>
+        <url-pattern>/SearchFilm</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>RegisterEpisode</servlet-name>
-        <url-pattern>/RegisterEpisode</url-pattern>
+        <servlet-name>SelectFilm</servlet-name>
+        <url-pattern>/SelectFilm</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>WatchEpisodes</servlet-name>
-        <url-pattern>/WatchEpisodes</url-pattern>
+        <servlet-name>AddRatingFilm</servlet-name>
+        <url-pattern>/AddRatingFilm</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>SearchSerie</servlet-name>
-        <url-pattern>/SearchSerie</url-pattern>
+        <servlet-name>RemoveRatingFilm</servlet-name>
+        <url-pattern>/RemoveRatingFilm</url-pattern>
     </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>SelectSerie</servlet-name>
-        <url-pattern>/SelectSerie</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>AddRating</servlet-name>
-        <url-pattern>/AddRating</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>RemoveRating</servlet-name>
-        <url-pattern>/RemoveRating</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>AddSerieToList</servlet-name>
-        <url-pattern>/AddSerieToList</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>RemoveSerieFromList</servlet-name>
-        <url-pattern>/RemoveSerieFromList</url-pattern>
-    </servlet-mapping>
+    
     <session-config>
         <session-timeout>3000</session-timeout>
     </session-config>
